# pcli2-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  mcphost.yml  oranda.json  plan-dist-manifest.json
.github/workflows/: ci.yml  docs.yml
src/: main.rs
