[package]
name = "pcli2-mcp"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/jchultarsky101/pcli2-mco"

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
base64 = "0.22.1"
clap = "4.5.55"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
